--- a/tafaseer_group/results/Paper.Rmd
+++ b/tafaseer_group/results/Paper.Rmd
@@ -1,26 +1,14 @@
 ---
-# Hey Gang! This is an RNotebook intended to be used with RStudio an'it be fly stuff!
-# ====================================================================================
-# For documentation, check out these links:
-# - https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf
-# - http://rmarkdown.rstudio.com/r_notebooks.html (a bit more explanatory)
-# - http://rmarkdown.rstudio.com/lesson-1.html (RNotebook is a superset of RMarkdown)
-# - https://blog.rstudio.org/2016/10/05/r-notebooks/ (some advanced examples)
-# - https://rmflight.github.io/posts/2012/10/papersinRmd.html (comment by a scientist-user)
-
 title: An Exploratory Data Analysis of 18 Tafasīr From the Early 8th to the Late 14th
   Century and Across a Wide Geographical Area Using Corpus Linguistical Methods
 author: "F. Blunck, S. Bukhari, M. Foradi, T. D. Keppen, J. R. Schmid"
 output:
-  pdf_document:
+  html_document:
     toc: yes
   html_notebook:
     toc: yes
-  html_document:
+  pdf_document:
     toc: yes
-
-# ====================================================================================
-# Title (above) and outline (below) are just a first draft, please burn and rearrange!
 ---
 
 # 1 The corpus
@@ -29,7 +17,7 @@ output:
 
 ## 1.2 Data extraction and transformation into processable outer form
 
-Yo, extraction was simple like tha':
+Yo, extraction was simple like tha' أخي:
 
 ```{R}
 print(paste('Hello', 'world', '!'))
