--- a/tafaseer_group/results/Paper.Rmd
+++ b/tafaseer_group/results/Paper.Rmd
@@ -1,26 +1,14 @@
 ---
-# Hey Gang! This is an RNotebook intended to be used with RStudio an'it be fly stuff!
-# ====================================================================================
-# For documentation, check out these links:
-# - https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf
-# - http://rmarkdown.rstudio.com/r_notebooks.html (a bit more explanatory)
-# - http://rmarkdown.rstudio.com/lesson-1.html (RNotebook is a superset of RMarkdown)
-# - https://blog.rstudio.org/2016/10/05/r-notebooks/ (some advanced examples)
-# - https://rmflight.github.io/posts/2012/10/papersinRmd.html (comment by a scientist-user)
-
-title: An Exploratory Data Analysis of 18 Tafasīr From the Early 8th to the Late 14th
-  Century and Across a Wide Geographical Area Using Corpus Linguistical Methods
+title: An Exploratory Data Analysis of 18 Tafasīr From the Early 8th to the Late
+  14th Century and Across a Wide Geographical Area Using Corpus Linguistical Methods
 author: "F. Blunck, S. Bukhari, M. Foradi, T. D. Keppen, J. R. Schmid"
 output:
-  pdf_document:
-    toc: yes
   html_notebook:
     toc: yes
   html_document:
     toc: yes
-
-# ====================================================================================
-# Title (above) and outline (below) are just a first draft, please burn and rearrange!
+  pdf_document:
+    toc: yes
 ---
 
 # 1 The corpus
@@ -39,7 +27,7 @@ print(paste('Hello', 'world', '!'))
 
 ### 1.3.1  d. 728: Jarir ibn Atiyah (Yamamah, Damascus)
 
-Dude's our oldest homie, 'n he swag man! Like, dude's not only a *mufassir*, naw, he actually a real poet, too, 'n know how to do some satire, ain't that cool?
+Dude's our oldest homie, 'n he swag man! Like, dude's not only a *mufassir*, naw, he actually a real poet, too, 'n know how to do some satire, ain't that cool? ???????????? ???????? ???? ????????????????
 
 ### 1.3.2  d. 925: Muhammad ibn Zakariya al-Razi (Rey)
 ### 1.3.3  d. 923: Al-Tabari (Amol-Baghdad)
