--- a/newspaper_group/code/readme
+++ b/newspaper_group/code/readme
@@ -2,5 +2,8 @@ scrapeR.R	functions used for scraping
 	call them e.g. by scrape.day.hespress(...)
 cleanR.R	functions used for transfering HTML to csv
 	call them e.g. by clean.hespress(...)
+makeUri.R
+	create final csv files
+basic_functions
 
 the functions are being called from the files hespress.R etc.
