Changes suggested by Thom.

--- a/tafaseer_group/03_results/Paper.Rmd
+++ b/tafaseer_group/03_results/Paper.Rmd
@@ -22,7 +22,7 @@ How has Islamic interpretation of the Quran changed over time? Have certain sect
 
 Our attempt at determining which verses enjoyed more consideration from the *mufassirūn* began with calculating the word count of every verse-specific chunk of the commentary and dividing that number by the total word count of the *tafsīr*. It was our belief that increased attention on a verse was indicative of some sort of importance to the *mufassir*. Importance might not necessarily mean that the *mufassir* had an increased affinity for the values or instructions espoused in the verse. A *mufassir* might have believed that an obscure verse required elucidation to make its message comprehensible to the Muslim layman and therefore devoted more writing to explication and contextualizing.
 
-When we sorted the verses from most written about to least, we observed some suspicious patterns. Consecutive verses were appearing next to one another on the list and they had identical word counts. When we inspected the files in our corpus, we found that there were duplicate chunks of text. The problem was that most of the writers alternated between writing about singles verses and writing about groups of consecutive verses that dealt with a single narrative or theme. If a section of a *tafsīr* covered consecutive verses together, [altafsir.com](altafsir.com) repeated that segment of text when each of those verses were selected on the website. When the script to download the tafasīr was run, it downloaded the repeated segments of texts and organized them as if they were unique to a single verse. Only three of the writers in the corpus consistently wrote about single verses and therefore did not succumb to the duplicate text problem.
+When we sorted the verses from most written about to least, we observed some suspicious patterns. Consecutive verses were appearing next to one another on the list and they had identical word counts. When we inspected the files in our corpus, we found that there were duplicate chunks of text. The problem was that most of the writers alternated between writing about singles verses and writing about groups of consecutive verses that dealt with a single narrative or theme. If a section of a *tafsīr* covered consecutive verses together, [altafsir.com](altafsir.com) repeated that segment of text when each of those verses were selected on the website. When the script to download the tafasīr was run, it downloaded the repeated segments of texts and organized them as if they were unique to a single verse. Only three of the writers in the corpus consistently wrote about single verses and therefore did not succumb to the duplicate text problem. Of the 87 *tafsīr* works listed on the website, 69 turned out to be completely empty and one author, *Ibn ʿArafa*, only provided commentary on *sūratān*. Both were removed from the corpus used for analysis, which consequently consists of 17 works comprising $i_{total}=16444304$ words.
 
 We ran a script that looked for duplicate texts and removed any repeated segments. Since we were not able to get word counts for specific verses, we decided to focus on the *sūra* or chapters of the Quran. There is a huge range of *sūra* lengths, with *sūrat al-baqara*, the longest, consisting of 286 verses and *sūrat al-kawṯar*, the shortest, consisting of 3 verses, so looking at how long the commentary was for a specific *sūra* relative to total *tafsīr* length would probably just leave us with something that resembles a list of *sūra*, from longest to shortest. We chose instead to look at length of *tafsīr* commentary divided by the length of the *sūra* it is commenting. We looked at the top twenty-five *sūrāt* for each *mufassir* and observed that the number of shared *sūra* among the writers of the corpus ranged from twelve to twenty-two. The relationship between the *mufassirūn* was visualized using [Gephi](https://gephi.org/), a free/open-source program used for social network analysis.
 
@@ -37,6 +37,7 @@ The data as described so far was run through the Gephi social network analysis p
 3. *ar-Rāzī*, *al-Fayrūzabādī*, *al-Qurṭubī*, *al-Khāzin*, and *Abū Ḥayyān*
 4. *al-Maḥallī* and *as-Suyūṭī*, *as-Samarqandī*, *al-Māwardī*, and *Ibn ʿAbdu-s-Salām*
 
+TODO: disambiguate mufassir names wherever they end up appearing first. Here's the unclear ones (mails from Dec 15): There is more than one al-Razi and Ibn atiyah.  Our al-Razi is Fakhr al-Din and our ibn atiya is ibn atiya al-andalusi. And al- khazin is Ala' al-din al-khazin.
 
 # 1 The corpus
 ## 1.1 Data origin and possible intentions behind its compilation
