Adding citations up until the end of the first paragraph that contains any. Substituting all typographical apostrophes with single quotation marks (this is, in the end, LaTeX!!!)

--- a/tafaseer_group/03_results/Paper.bib
+++ b/tafaseer_group/03_results/Paper.bib
@@ -29,4 +29,65 @@
   date = {2006}
 }
 
+@incollection{bauer2013,
+  location = {{New York, NY}},
+  edition = {2nd/8th-9th/15th C.},
+  title = {A {{Study}} of {{Introductions}} to {{Classical Works}} of {{Tafsir}}},
+  booktitle = {Aims, {{Methods}} and {{Contexts}} of {{Qur}}’anic {{Exegesis}}},
+  publisher = {{Oxford University Press}},
+  author = {Bauer, Karen},
+  date = {2013},
+  pages = {39--65}
+}
+
+@inreference{ei_albaghawi,
+  edition = {Second Edition},
+  title = {Al-{{Baġawī}}},
+  booktitle = {Encyclopaedia of {{Islam}}},
+  author = {Robson, J.},
+  editor = {Bearman, P. and Bianquis, Th. and Bosworth, C. E. and van Donzel, E. and Heinrichs, W. P.},
+  options = {useprefix=true}
+}
+
+@incollection{mallett,
+  title = {Ibn Al-{{Jawzī}}},
+  booktitle = {Christian-{{Muslim Relations}} 600 - 1500},
+  author = {Alex, Mallett},
+  editorb = {Thomas, David},
+  editorbtype = {redactor}
+}
+
+@article{salahi2002,
+  entrysubtype = {newspaper},
+  title = {Scholar of {{Renown}}: {{Ibn Atiyyah}}},
+  journaltitle = {Arab News},
+  author = {Salahi, Adil},
+  date = {2002-10-14}
+}
+
+@article{salahi2016,
+  entrysubtype = {newspaper},
+  title = {Izz {{Al}}-{{Din}} Ibn {{Abd Al}}-{{Salam}}},
+  journaltitle = {Muslim Heritage},
+  author = {Salahi, Adil},
+  date = {2016-12-01}
+}
+
+@inreference{ei_ibnkathir,
+  edition = {Second Edition},
+  title = {Ibn {{Kat̲h̲īr}}},
+  booktitle = {Encyclopaedia of {{Islam}}},
+  author = {Laoust, H.},
+  editor = {Bearman, P. and Bianquis, Th. and Bosworth, C. E. and van Donzel, E. and Heinrichs, W. P.},
+  options = {useprefix=true}
+}
+
+@book{mcauliffe1991,
+  location = {{New York, NY}},
+  title = {Qur'anic {{Christians}}: {{An Analysis}} of {{Classical}} and {{Modern Exegesis}}},
+  publisher = {{Cambridge University Press}},
+  author = {McAuliffe, Jane Dammen},
+  date = {1991}
+}
+
 
