More transliterations, more citations, also adding a short paragraph on transliteration choices.

--- a/tafaseer_group/03_results/Paper.Rmd
+++ b/tafaseer_group/03_results/Paper.Rmd
@@ -22,7 +22,15 @@ csl: aethiopistische-forschungen.csl
 
 How has Islamic interpretation of the Quran changed over time? Have certain sections of the Quran enjoyed more attention from religious scholars and if so, has preference shifted with time? Does geographic distance equate to divergent preference for scholars who are contemporaneous to one another? Is doctrinal affiliation the primary factor in a *mufassir* (Islamic exegete) giving a section of the Quran more consideration? To answer these questions, we sought out exegetical works that were in a manageable and navigable digital format.
 
-# 2 The Tafāsīr
+1.1 A note on transliteration
+
+The transliteration system used is that of the [German Oriental Society](http://www.dmg-web.de/)[^dmg]. We have tried to be consistent in our transliteration of Arabic words (and sometimes Persian names), but for reasons stylistic reasons or other case-by-case considerations there can be slight inconsistencies for which we ask the reader's digression (i.e., vowelisation was sometimes added where it helps the flow of pronounciation). With regards to diphtong phonemes we have opted towards the variant employing the combination of one consonantal and one vowel representation which we feel best evokes a "closer-to-correct" pronounciation in readers not trained in Arabic. Proper names were translterated starting with capital letters only at the beginning of a sentence or if they are a person's or a place's name. Words that have found their way into English[^englishwords], and which the reader can be assumed to be familiar with, were only transliterated if part of a group of other Arabic words.
+
+[^dmg]: *Deutsche Morgenländische Gesellschaft* in the original. A copy of the latest transliteration rules anno 1969 is available from [http://www.dmg-web.de/pdf/Denkschrift.pdf](http://www.dmg-web.de/pdf/Denkschrift.pdf).
+
+[^englishwords]: Such as Quran, Sunni, Shia, Fatimid, etc.
+
+# 2 The tafāsīr
 
 TODO: DMGize
 
@@ -66,42 +74,40 @@ We ran a script that looked for duplicate texts and removed any repeated segment
 
 The data as described so far was run through the Gephi social network analysis program. The algorithm calculated four distinct groups, represented as colors in figure 1. They are as follows:
 
-1. Green: *Ibnu-l-Ǧawzī* (d. 597 AH),, *aṭ-Ṭabarī* (d. 310 AH), *Ibn Kaṯīr* (d. 774 AH), *Ibn ʿAṭīya* (d. 546 AH), and *al-Baġawī* (d. 516 AH)
+1. Green: *Ibnu-l-Ǧawzī* (d. 597 AH), *aṭ-Ṭabarī* (d. 310 AH), *Ibn Kaṯīr* (d. 774 AH), *Ibn ʿAṭīya* (d. 546 AH), and *al-Baġawī* (d. 516 AH)
 2. Blue: *az-Zamaḫšarī* (d. 538 AH), *al-Bayḍāwī* (d. 685 AH), and *an-Nasafī* (d. 710 AH)
 3. Purple: *ar-Rāzī* (d. 606 AH), *al-Fayrūzābādī* (d. 817 AH), *al-Qurṭubī* (d. 671 AH), *al-Ḫāzin* (d. 741 AH), and *Abū Ḥayyān* (d. 754 AH)
 4. Orange: *al-Maḥallī* (d. 864 AH) and *as-Suyūṭī* (d. 911 AH), *as-Samarqandī* (d. 375 AH), *al-Māwardī* (d. 450 AH), and *Ibn ʿAbdi-s-Salām* (d. 660 AH)
 
-The unifying characteristic for the exegetes of the first cluster is their reputation as traditionalists. Al-Tabari saw his method of *tafsīr bi-l-maṯūr*, or exclusive reliance on Hadith in matters of Quranic interpretation, as essential to avoid the introduction of *bidʿa* or heretical innovation (@bauer2013). *Al-Baġawī* emphasized the importance of purity in Islamic doctrine and worked to exclude teachings that he believed could not be properly attributed to Muḥammad or the *ṣaḥāba*, the companions of Muḥammad (@ei_albaghawi). Hanbali adherent *Ibnu-l-Ǧawzī* campaigned against the Shia in Iraq and authored a paean[^paean] celebrating the end of Ismaili Fatimid rule in Egypt and the accession of a Sunni, *Ṣalāḥ ad-Dīn*, to power (@mallett). *Ibn ʿAṭīya*'s exegesis received praise from *Ibn Taimīya*, the intellectual forefather of movements that are frequently labeled as Salafist, for its adherence to orthodoxy (@salahi2002). The inclusion of *Ibn Taimīya*'s student *Ibn Kaṯīr* can be attributed to either his conservative leanings—he penned a defense of armed Jihad against neighboring non-Muslim states (@ei_ibnkathir)—or to his *tafsīr* being, as some scholars have observed, a summarized version of *aṭ-Ṭabarī* (@mcauliffe1991).
+The unifying characteristic for the exegetes of the first cluster is their reputation as traditionalists. *Aṭ-Ṭabarī* saw his method of *tafsīr bi-l-maṯūr*, or exclusive reliance on Hadith in matters of Quranic interpretation, as essential to avoid the introduction of *bidʿa* or heretical innovation (@bauer2013). *Al-Baġawī* emphasized the importance of purity in Islamic doctrine and worked to exclude teachings that he believed could not be properly attributed to Muḥammad or the *ṣaḥāba*, the companions of Muḥammad (@ei_albaghawi). *Ḥanbalī* adherent *Ibnu-l-Ǧawzī* campaigned against the Shia in Iraq and authored a paean[^paean] celebrating the end of *ismaʿīlī* Fatimid rule in Egypt and the accession of a Sunni, *Ṣalāḥ ad-Dīn*, to power (@mallett). *Ibn ʿAṭīya*'s exegesis received praise from *Ibn Taimīya*, the intellectual forefather of movements that are frequently labeled as Salafist, for its adherence to orthodoxy (@salahi2002). The inclusion of *Ibn Taimīya*'s student *Ibn Kaṯīr* can be attributed to either his conservative leanings—he penned a defense of armed Jihad against neighboring non-Muslim states (@ei_ibnkathir)—or to his *tafsīr* being, as some scholars have observed, a summarized version of *aṭ-Ṭabarī* (@mcauliffe1991).
 
 [^paean]: "a song, film, or piece of writing that praises someone or something very enthusiastically:" (Cambridge Dictionary of English)
 
-TODO: DMGize, mark citations
-
-For the second cluster, geography seems to be the unifying factor. Arabic grammarian and Mu'tazila partisan al-Zamakhshari (McAuliffe, 1991) differed from Hanafi jurist al-Nasafi on matters of doctrine (Poonawala, Wensinck & Heffening, n.d.) but they both lived in the Central Asian region known as Ma wara al-Nahr (Transoxiana) while the Shafi'i al-Baydawi lived in what is now Iran (Krauss-Sánchez, n.d.). Al-Baydawi's exegesis Anwar al-tanzil wa asrar al-ta'wil has been labeled an amended version of al-Zamakhshari's al-Kashshaaf, with Mu'tazila philosophy and other perceived heresies expunged from the text (McAuliffe, 1991). This grouping may reflect a unique Central Asian outlook to the Quran and the addition of al-Baydawi may result from his reliance on the work of al-Zamakhshari. 
+For the second cluster, geography seems to be the unifying factor. Arabic grammarian and *muʿtazila* partisan *az-Zamaḫšarī* (@mcauliffe1991) differed from ḥanafī jurist *an-Nasafī* on matters of doctrine (@ei_annasafi) but they both lived in the Central Asian region known as *mā warāʾu-n-nahr* (Transoxiana) while the šāfiʿī *al-Bayḍāwī* lived in what is now Iran (@emc_albaydawi). *Al-Bayḍāwī*'s exegesis *anwār at-tanzīl wa-ʾasrār at-taʾwīl* has been labeled an amended version of *az-Zamaḫšarī*'s *al-kaššāf*, with *muʿtazila* philosophy and other perceived heresies expunged from the text (@mcauliffe1991). This grouping may reflect a unique Central Asian outlook to the Quran and the addition of *al-Bayḍāwī* may result from his reliance on the work of *az-Zamaḫšarī*.
 
 TODO: DMGize, mark citations
 
-If there is a latent, unifying factor to the mufasiroon of the third cluster, it is not immediately apparent to us. The exegetes were not contemporaneous to one another with al-Razi preceding al-Fairuzabadi by two centuries. Geography certainly did not connect the writers. Abu Hayyan (Glazer & Homerin, n.d.) and al-Qurtubi were both born in Muslim Spain and ultimately settled in Egypt (Ruano, n.d.). Al-Khazin lived in Syria which also was briefly the home of Persian-born al-Fairuzabadi who also spent his life in Jerusalem, Mecca, and Yemen (Fleisch, n.d.). Al-Razi lived in what is now Iran and Afghanistan (McAuliffe, 1991). In terms of doctrinal leanings, Abu Hayyan was a traditionalist and admirer of Ibn Taymiyyah (Glazer & Homerin, n.d.) while al-Razi, though ostensibly a critic of Mu'tazila theology, is seen to have incorporated heterodox tenets emphasizing reason and ta'wil or figurative reading in Quranic interpretation (Jaffer, 2015). Unfortunately, the inability to obtain word counts at the verse-level and therefore our inspection at the chapter-level may have adversely affected the quality of the groupings calculated by Gephi.
+If there is a latent, unifying factor to the mufasiroon of the third cluster, it is not immediately apparent to us. The exegetes were not contemporaneous to one another with al-Razi preceding *al-Fayrūzābādī* by two centuries. Geography certainly did not connect the writers. Abu Hayyan (Glazer & Homerin, n.d.) and al-Qurtubi were both born in Muslim Spain and ultimately settled in Egypt (Ruano, n.d.). Al-Khazin lived in Syria which also was briefly the home of Persian-born *al-Fayrūzābādī* who also spent his life in Jerusalem, Mecca, and Yemen (Fleisch, n.d.). Al-Razi lived in what is now Iran and Afghanistan (@mcauliffe1991). In terms of doctrinal leanings, Abu Hayyan was a traditionalist and admirer of Ibn Taymiyyah (Glazer & Homerin, n.d.) while al-Razi, though ostensibly a critic of muʿtazila theology, is seen to have incorporated heterodox tenets emphasizing reason and ta'wil or figurative reading in Quranic interpretation (Jaffer, 2015). Unfortunately, the inability to obtain word counts at the verse-level and therefore our inspection at the chapter-level may have adversely affected the quality of the groupings calculated by Gephi.
 
 TODO: DMGize, mark citations
 
-The last cluster of our analysis resulted in a predictable grouping of exegetes. The primary characteristic that unified these authors was their choice of school of jurisprudence. Although these exegetes were all from different time periods and, for the most part, varying geographical locations the analogous school of thought when approaching the interpretations of the Quran was similar enough to differentiate this group from the rest of our corpus. Amongst the four authors in this cluster three were from the school of Shafi'i and one from the school of Hanafi.
+The last cluster of our analysis resulted in a predictable grouping of exegetes. The primary characteristic that unified these authors was their choice of school of jurisprudence. Although these exegetes were all from different time periods and, for the most part, varying geographical locations the analogous school of thought when approaching the interpretations of the Quran was similar enough to differentiate this group from the rest of our corpus. Amongst the four authors in this cluster three were from the school of šāfiʿī and one from the school of ḥanafī.
 
 TODO: DMGize, mark citations
 
-Al–Mawardi was an Islamic jurist born in Basra, Iraq during 364AH (Sharif, 2002). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Iman of Baghdad (Zahoor, 1998) . The cities where al-mawari lived where known to be hubs of the Mu'tazaila school of thought, so some found it peculiar that the chief qadi of Baghdad (known hub of Mu'tazaila jurisprudence) was in fact associated with the Shafi'i school of thought. He was later condemned for his Mu'tazila sympathies. Al-Mawardi was known for his works in islamic legal principles, in fact in 429 AH the caliph Al-Qadir summoned four jurist from each school of jurisprudence to write a legal epitome.(Sharif, 2002) Al-Mawardi was chosen to represent the school of Shafi'i. Amongst the four jurist the Caliph favored Al-Mawardi and appointed chief imam. (Sharif, 2002) Along with the school of jurisprudence a common factor amongst most of the authors was their interest or relation in Islamic law. 
+Al–Mawardi was an Islamic jurist born in Basra, Iraq during 364AH (Sharif, 2002). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Iman of Baghdad (Zahoor, 1998) . The cities where al-mawari lived where known to be hubs of the Mu'tazaila school of thought, so some found it peculiar that the chief qadi of Baghdad (known hub of Mu'tazaila jurisprudence) was in fact associated with the šāfiʿī school of thought. He was later condemned for his muʿtazila sympathies. Al-Mawardi was known for his works in islamic legal principles, in fact in 429 AH the caliph Al-Qadir summoned four jurist from each school of jurisprudence to write a legal epitome.(Sharif, 2002) Al-Mawardi was chosen to represent the school of šāfiʿī. Amongst the four jurist the Caliph favored Al-Mawardi and appointed chief imam. (Sharif, 2002) Along with the school of jurisprudence a common factor amongst most of the authors was their interest or relation in Islamic law. 
 
 TODO: DMGize, mark citations
 
-Ibn 'Abd al-Salam was born in Damascus in year 577AH(Salahi) much after Abu al-Layth Al Samarqandi and Al–Mawardi. During his time he was the leading authority in the Shafi'i Jurisprudence and most famous for his interpretations of Islamic legal principles. Unlike al mawari ,Abd al-Salam was known to be defiant of customs he deemed “unsanctioned”. He even went as far as condemning those who follow these unsanctioned customs regardless of status; most notably the ruler of Damascus As-Salih Ismail.(Jackson, 1996) This condemning led to his imprisonment and eventual emigration to Cairo, Egypt. In Cairo he was credited as the first jurist to teach Quranic commentary in Egypt. (Salahi) Like Al-Mawardi, Al- Salam was a world renowned scholar of fatwas. Al-salam was so respected, islamic jurist like al-Hafiz al-Mundhiri stopped giving fatwas stating "It does not behove any jurist to give a fatwa where Izz al-Din(Ibn 'Abd al-Salam) happens to be present."(Salahi) Both Ibn 'Abd al-Salam and Al-Mawardi were highly respected scholars of their time especially in regards to islamic law. Both authors were advisors to their respected islamic governments of their time,(Jackson, 1996) another factor which may have attributed to the groups of these authors in the same cluster. 
+Ibn 'Abd al-Salam was born in Damascus in year 577AH(Salahi) much after Abu al-Layth Al Samarqandi and Al–Mawardi. During his time he was the leading authority in the šāfiʿī Jurisprudence and most famous for his interpretations of Islamic legal principles. Unlike al mawari ,Abd al-Salam was known to be defiant of customs he deemed “unsanctioned”. He even went as far as condemning those who follow these unsanctioned customs regardless of status; most notably the ruler of Damascus As-Salih Ismail.(Jackson, 1996) This condemning led to his imprisonment and eventual emigration to Cairo, Egypt. In Cairo he was credited as the first jurist to teach Quranic commentary in Egypt. (Salahi) Like Al-Mawardi, Al- Salam was a world renowned scholar of fatwas. Al-salam was so respected, islamic jurist like al-Hafiz al-Mundhiri stopped giving fatwas stating "It does not behove any jurist to give a fatwa where Izz al-Din(Ibn 'Abd al-Salam) happens to be present."(Salahi) Both Ibn 'Abd al-Salam and Al-Mawardi were highly respected scholars of their time especially in regards to islamic law. Both authors were advisors to their respected islamic governments of their time,(Jackson, 1996) another factor which may have attributed to the groups of these authors in the same cluster. 
 
 TODO: DMGize, mark citations
 
-Jalal al-Din al-Suyuti was born in Cario, Eygpt in the year 849AH (al-Suyuti, 2007) making his work the most recent amongst the cluster. Like most authors in the cluster he was a islamic jurist from the school of shafi'i. He was acknowledged as one of the more recent authority of the Shafi'i school whose degree of ijthad was accepted by most(Meri,2005). Jalal al-Din al-Suyuti lacked a particular interest in islamic law and was not known to be a head advisor for any Islamic governments like both Ibn 'Abd al-Salam and Al-Mawardi. Although his father being a judge of a islamic state may have influenced any emphasis on law(islamic) within his writings and thus placing him within this cluster.(al-suyuti,2007) Unlike the other authors, al-Suyuti also studied the Hanafi school of jurisprudence and was tutored by a Sufi, though his work drew primarily from shafi'i school of thought. Al-Suyuti's interest in the Hanafi jurisprudence may account for the inclusion of Abu al-Layth Al Samarqandi in our cluster. 
+Jalal al-Din al-Suyuti was born in Cario, Eygpt in the year 849AH (al-Suyuti, 2007) making his work the most recent amongst the cluster. Like most authors in the cluster he was a islamic jurist from the school of šāfiʿī. He was acknowledged as one of the more recent authority of the šāfiʿī school whose degree of ijthad was accepted by most(Meri,2005). Jalal al-Din al-Suyuti lacked a particular interest in islamic law and was not known to be a head advisor for any Islamic governments like both Ibn 'Abd al-Salam and Al-Mawardi. Although his father being a judge of a islamic state may have influenced any emphasis on law(islamic) within his writings and thus placing him within this cluster.(al-suyuti,2007) Unlike the other authors, al-Suyuti also studied the ḥanafī school of jurisprudence and was tutored by a Sufi, though his work drew primarily from šāfiʿī school of thought. Al-Suyuti's interest in the ḥanafī jurisprudence may account for the inclusion of Abu al-Layth Al Samarqandi in our cluster. 
 
 TODO: DMGize, mark citations
 
-Abu al-Layth al-Samarqandi author of Bahr Ul ‘Ulum was the single author in the cluster from the school of Hanafi. Apart from his jurisprudence another outlying factor for al-Samaraqandi was his geographical location and time period. He was born in Afghanistan during 373AH making him the oldest exegete in this cluster. (wheeler, 2002) Since his worked dated back so far we were unable to find much information in regards to his lifestyle or any other factors that may have attributed to his placing in this cluster although, however we were able to compile a few specific features of his exegesis. In his work of the Quran al-samarqandi was known to relate the stories of sahabah and other hadiths from people not proven to be 100% reliable. He was also known for his lack of interest in the various methods of recitation (Qira'at).(“Liste..” 2002) Unfortunately, due to lack of information on Al Samarqandi we were unable to pinpoint a specific factor that attributed to his grouping in this cluster, for now he remains an outlier.
+Abu al-Layth al-Samarqandi author of Bahr Ul ‘Ulum was the single author in the cluster from the school of ḥanafī. Apart from his jurisprudence another outlying factor for al-Samaraqandi was his geographical location and time period. He was born in Afghanistan during 373AH making him the oldest exegete in this cluster. (wheeler, 2002) Since his worked dated back so far we were unable to find much information in regards to his lifestyle or any other factors that may have attributed to his placing in this cluster although, however we were able to compile a few specific features of his exegesis. In his work of the Quran al-samarqandi was known to relate the stories of sahabah and other hadiths from people not proven to be 100% reliable. He was also known for his lack of interest in the various methods of recitation (Qira'at).(“Liste..” 2002) Unfortunately, due to lack of information on Al Samarqandi we were unable to pinpoint a specific factor that attributed to his grouping in this cluster, for now he remains an outlier.
 
 TODO: DMGize, mark citations
 
@@ -164,9 +170,6 @@ Glazer, Sidney and Homerin, Th. Emil, “Abū Ḥayyān al-Gharnāṭī”, in: 
 Jackson, Sherman A(1996). Islamic law and the state: the constitutional jurisprudence of Shihāb al-Dīn al-Qarāfī. Leiden: E.J. Brill, 1996.
 
 Jaffer, Tariq (2015). Razi: Master of Qur'anic Interpretation and Theological Reasoning. New York, NY: Oxford University Press.
-
-Krauss-Sánchez, Heidi R., “al-Baydāwī”, in: Encyclopedia of the Medieval Chronicle, Edited by: Graeme Dunphy, Cristian Bratu. First Published online 2016. Retrieved
-From http://www.brillonline.com
 
 "Liste des compagnies aériennes par pays." (2011) Wikipedia. Accessed December 1, 2016. https://fr.wikipedia.org/wiki/Liste_des_compagnies_a%C3%A9riennes_par_pays.
 
