--- a/tafaseer_group/03_results/Paper.bib
+++ b/tafaseer_group/03_results/Paper.bib
@@ -90,4 +90,19 @@
   date = {1991}
 }
 
+@inreference{ei_annasafi,
+  edition = {Second Edition},
+  title = {Al-{{Nasafī}}},
+  booktitle = {Encyclopaedia of {{Islam}}},
+  author = {Poonawala, I. and Wensinck, A. J. and Heffening, W.},
+  editor = {Bearman, I. and Bianquis, Th. and Bosworth, C. E. and van Donzel, E. and Heinrichs, W. P.},
+  options = {useprefix=true}
+}
+
+@inreference{krauss-sanchez:albaydawi,
+  title = {Al-{{Baydāwī}}”, in: , {{Edited}} by: {{Graeme Dunphy}}, {{Cristian Bratu}}. {{First Published}} Online 2016. {{Retrieved From}} {{http://www.brillonline.com}}},
+  booktitle = {Encyclopedia of the {{Medieval Chronicle}}},
+  author = {Krauss-Sánchez, Heidi R.}
+}
+
 
