Another paragraph transliterated; correcting some chapter heading levels.

--- a/tafaseer_group/03_results/Paper.bib
+++ b/tafaseer_group/03_results/Paper.bib
@@ -31,7 +31,7 @@
 
 @incollection{bauer2013,
   location = {{New York, NY}},
-  edition = {2nd/8th-9th/15th C.},
+  edition = {2nd/8th-9th/15th},
   title = {A {{Study}} of {{Introductions}} to {{Classical Works}} of {{Tafsir}}},
   booktitle = {Aims, {{Methods}} and {{Contexts}} of {{Qur}}’anic {{Exegesis}}},
   publisher = {{Oxford University Press}},
@@ -41,7 +41,7 @@
 }
 
 @inreference{ei_albaghawi,
-  edition = {Second Edition},
+  edition = {2nd},
   title = {Al-{{Baġawī}}},
   booktitle = {Encyclopaedia of {{Islam}}},
   author = {Robson, J.},
@@ -74,7 +74,7 @@
 }
 
 @inreference{ei_ibnkathir,
-  edition = {Second Edition},
+  edition = {2nd},
   title = {Ibn {{Kat̲h̲īr}}},
   booktitle = {Encyclopaedia of {{Islam}}},
   author = {Laoust, H.},
@@ -91,7 +91,7 @@
 }
 
 @inreference{ei_annasafi,
-  edition = {Second Edition},
+  edition = {2nd},
   title = {Al-{{Nasafī}}},
   booktitle = {Encyclopaedia of {{Islam}}},
   author = {Poonawala, I. and Wensinck, A. J. and Heffening, W.},
@@ -99,10 +99,29 @@
   options = {useprefix=true}
 }
 
-@inreference{krauss-sanchez:albaydawi,
-  title = {Al-{{Baydāwī}}”, in: , {{Edited}} by: {{Graeme Dunphy}}, {{Cristian Bratu}}. {{First Published}} Online 2016. {{Retrieved From}} {{http://www.brillonline.com}}},
+@inreference{emc_albaydawi,
+  edition = {1st},
+  title = {Al-{{Baydāwī}}},
   booktitle = {Encyclopedia of the {{Medieval Chronicle}}},
-  author = {Krauss-Sánchez, Heidi R.}
+  author = {Krauss-Sánchez, Heidi R.},
+  editor = {Dunphy, Graeme and Bratu, Cristian [sic]}
+}
+
+@inreference{ei_abuhayyan,
+  edition = {3rd},
+  title = {Abū {{Ḥayyān}} Al-{{Gharnāṭī}}},
+  booktitle = {Encyclopaedia of {{Islam}}},
+  author = {Glazer, Sidney and Homerin, Th. Emil},
+  editor = {Fleet, Kate and Krämer, Gudrun and Matringe, Denis and Nawas, John and Rowson, Everett}
+}
+
+@inreference{ei_alfiruzabadi,
+  edition = {2nd},
+  title = {Al-{{Fīrūzābādī}}},
+  booktitle = {Encyclopaedia of {{Islam}}},
+  author = {Fleisch, H.},
+  editor = {Bearman, P. and Bianquis, Th. and Bosworth, C. E. and van Donzel, E. and Heinrichs, W. P.},
+  options = {useprefix=true}
 }
 
 
