--- a/tafaseer_group/03_results/Paper.Rmd
+++ b/tafaseer_group/03_results/Paper.Rmd
@@ -22,7 +22,7 @@ csl: aethiopistische-forschungen.csl
 
 How has Islamic interpretation of the Quran changed over time? Have certain sections of the Quran enjoyed more attention from religious scholars and if so, has preference shifted with time? Does geographic distance equate to divergent preference for scholars who are contemporaneous to one another? Is doctrinal affiliation the primary factor in a *mufassir* (Islamic exegete) giving a section of the Quran more consideration? To answer these questions, we sought out exegetical works that were in a manageable and navigable digital format.
 
-1.1 A note on transliteration
+## 1.1 A note on transliteration
 
 The transliteration system used is that of the [German Oriental Society](http://www.dmg-web.de/)[^dmg]. We have tried to be consistent in our transliteration of Arabic words (and sometimes Persian names), but for reasons stylistic reasons or other case-by-case considerations there can be slight inconsistencies for which we ask the reader's digression (i.e., vowelisation was sometimes added where it helps the flow of pronounciation). With regards to diphtong phonemes we have opted towards the variant employing the combination of one consonantal and one vowel representation which we feel best evokes a "closer-to-correct" pronounciation in readers not trained in Arabic. Proper names were translterated starting with capital letters only at the beginning of a sentence or if they are a person's or a place's name. Words that have found their way into English[^englishwords], and which the reader can be assumed to be familiar with, were only transliterated if part of a group of other Arabic words.
 
@@ -32,11 +32,7 @@ The transliteration system used is that of the [German Oriental Society](http://
 
 # 2 The tafāsīr
 
-TODO: DMGize
-
-For reference, the following tafāsīr which ended up being the subject of this document are listed below. Short remarks on each of their authors' biographies will follow.
-
-TODO: If anybody feels like properly capitalizing the titles again, I don't, rigt now. The uppercase letters can be looked up (and then copied and pasted) by clicking on the lowercase letters on https://en.wikipedia.org/wiki/DIN_31635. You could also try https://github.com/sixtyfive/de_dmg/blob/master/windows7810/de_dmg_amd64.msi if you have Windows, but it's quite old and I don't know if it'll still work (but it might).
+For reference, the following *tafāsīr* which ended up being the subject of this document are listed below. Short remarks on each of their authors' biographies will follow.
 
 * *al-baḥr al-muḥīt* by *Abū Ḥayyān*
 * *al-ǧāmiʿ li-ʾaḥkām al-qurʾān* by *al-Qurṭubī*
@@ -81,13 +77,11 @@ The data as described so far was run through the Gephi social network analysis p
 
 The unifying characteristic for the exegetes of the first cluster is their reputation as traditionalists. *Aṭ-Ṭabarī* saw his method of *tafsīr bi-l-maṯūr*, or exclusive reliance on Hadith in matters of Quranic interpretation, as essential to avoid the introduction of *bidʿa* or heretical innovation (@bauer2013). *Al-Baġawī* emphasized the importance of purity in Islamic doctrine and worked to exclude teachings that he believed could not be properly attributed to Muḥammad or the *ṣaḥāba*, the companions of Muḥammad (@ei_albaghawi). *Ḥanbalī* adherent *Ibnu-l-Ǧawzī* campaigned against the Shia in Iraq and authored a paean[^paean] celebrating the end of *ismaʿīlī* Fatimid rule in Egypt and the accession of a Sunni, *Ṣalāḥ ad-Dīn*, to power (@mallett). *Ibn ʿAṭīya*'s exegesis received praise from *Ibn Taimīya*, the intellectual forefather of movements that are frequently labeled as Salafist, for its adherence to orthodoxy (@salahi2002). The inclusion of *Ibn Taimīya*'s student *Ibn Kaṯīr* can be attributed to either his conservative leanings—he penned a defense of armed Jihad against neighboring non-Muslim states (@ei_ibnkathir)—or to his *tafsīr* being, as some scholars have observed, a summarized version of *aṭ-Ṭabarī* (@mcauliffe1991).
 
-[^paean]: "a song, film, or piece of writing that praises someone or something very enthusiastically:" (Cambridge Dictionary of English)
+[^paean]: "[A] song, film, or piece of writing that praises someone or something very enthusiastically:" (Cambridge Dictionary of English)
 
-For the second cluster, geography seems to be the unifying factor. Arabic grammarian and *muʿtazila* partisan *az-Zamaḫšarī* (@mcauliffe1991) differed from ḥanafī jurist *an-Nasafī* on matters of doctrine (@ei_annasafi) but they both lived in the Central Asian region known as *mā warāʾu-n-nahr* (Transoxiana) while the šāfiʿī *al-Bayḍāwī* lived in what is now Iran (@emc_albaydawi). *Al-Bayḍāwī*'s exegesis *anwār at-tanzīl wa-ʾasrār at-taʾwīl* has been labeled an amended version of *az-Zamaḫšarī*'s *al-kaššāf*, with *muʿtazila* philosophy and other perceived heresies expunged from the text (@mcauliffe1991). This grouping may reflect a unique Central Asian outlook to the Quran and the addition of *al-Bayḍāwī* may result from his reliance on the work of *az-Zamaḫšarī*.
+For the second cluster, geography seems to be the unifying factor. Arabic grammarian and *muʿtazila* partisan *az-Zamaḫšarī* (@mcauliffe1991) differed from *ḥanafī* jurist *an-Nasafī* on matters of doctrine (@ei_annasafi) but they both lived in the Central Asian region known as *mā warāʾu-n-nahr* (Transoxiana) while the šāfiʿī *al-Bayḍāwī* lived in what is now Iran (@emc_albaydawi). *Al-Bayḍāwī*'s exegesis *anwār at-tanzīl wa-ʾasrār at-taʾwīl* has been labeled an amended version of *az-Zamaḫšarī*'s *al-kaššāf*, with *muʿtazila* philosophy and other perceived heresies expunged from the text (@mcauliffe1991). This grouping may reflect a unique Central Asian outlook to the Quran and the addition of *al-Bayḍāwī* may result from his reliance on the work of *az-Zamaḫšarī*.
 
-TODO: DMGize, mark citations
-
-If there is a latent, unifying factor to the mufasiroon of the third cluster, it is not immediately apparent to us. The exegetes were not contemporaneous to one another with al-Razi preceding *al-Fayrūzābādī* by two centuries. Geography certainly did not connect the writers. Abu Hayyan (Glazer & Homerin, n.d.) and al-Qurtubi were both born in Muslim Spain and ultimately settled in Egypt (Ruano, n.d.). Al-Khazin lived in Syria which also was briefly the home of Persian-born *al-Fayrūzābādī* who also spent his life in Jerusalem, Mecca, and Yemen (Fleisch, n.d.). Al-Razi lived in what is now Iran and Afghanistan (@mcauliffe1991). In terms of doctrinal leanings, Abu Hayyan was a traditionalist and admirer of Ibn Taymiyyah (Glazer & Homerin, n.d.) while al-Razi, though ostensibly a critic of muʿtazila theology, is seen to have incorporated heterodox tenets emphasizing reason and ta'wil or figurative reading in Quranic interpretation (Jaffer, 2015). Unfortunately, the inability to obtain word counts at the verse-level and therefore our inspection at the chapter-level may have adversely affected the quality of the groupings calculated by Gephi.
+If there is a latent, unifying factor to the *mufassirūn* of the third cluster, it is not immediately apparent to us. The exegetes were not contemporaneous to one another with *ar-Rāzī* preceding *al-Fayrūzābādī* by two centuries. Geography certainly did not connect the writers. *Abū Ḥayyān* (@ei_abuhayyan) and *al-Qurṭubī* were both born in Muslim Spain and ultimately settled in Egypt (Ruano, n.d.). Al-Khazin lived in Syria which also was briefly the home of Persian-born *al-Fayrūzābādī* who also spent his life in Jerusalem, Mecca, and Yemen (@ei_alfiruzabadi). *ar-Rāzī* lived in what is now Iran and Afghanistan (@mcauliffe1991). In terms of doctrinal leanings, *Abū Ḥayyān* was a traditionalist and admirer of *Ibn Taimīya* (@ei_abuhayyan) while *ar-Rāzī*, though ostensibly a critic of *muʿtazila* theology, is seen to have incorporated heterodox tenets emphasizing reason and *taʾwīl* or figurative reading in Quranic interpretation (Jaffer, 2015). Unfortunately, the inability to obtain reliable word counts at the verse-level (and therefore our inspection at the chapter-level) may have adversely affected the quality of the groupings calculated by Gephi.
 
 TODO: DMGize, mark citations
 
@@ -95,7 +89,7 @@ The last cluster of our analysis resulted in a predictable grouping of exegetes.
 
 TODO: DMGize, mark citations
 
-Al–Mawardi was an Islamic jurist born in Basra, Iraq during 364AH (Sharif, 2002). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Iman of Baghdad (Zahoor, 1998) . The cities where al-mawari lived where known to be hubs of the Mu'tazaila school of thought, so some found it peculiar that the chief qadi of Baghdad (known hub of Mu'tazaila jurisprudence) was in fact associated with the šāfiʿī school of thought. He was later condemned for his muʿtazila sympathies. Al-Mawardi was known for his works in islamic legal principles, in fact in 429 AH the caliph Al-Qadir summoned four jurist from each school of jurisprudence to write a legal epitome.(Sharif, 2002) Al-Mawardi was chosen to represent the school of šāfiʿī. Amongst the four jurist the Caliph favored Al-Mawardi and appointed chief imam. (Sharif, 2002) Along with the school of jurisprudence a common factor amongst most of the authors was their interest or relation in Islamic law. 
+Al–Mawardi was an Islamic jurist born in Basra, Iraq during 364AH (Sharif, 2002). During his time he was considered a high profile figure appointed with various significant responsibilities, including serving as a diplomat for the caliphate and eventually appointed chief Iman of Baghdad (Zahoor, 1998) . The cities where al-mawari lived where known to be hubs of the Mu'tazaila school of thought, so some found it peculiar that the chief qadi of Baghdad (known hub of Mu'tazaila jurisprudence) was in fact associated with the šāfiʿī school of thought. He was later condemned for his *muʿtazila* sympathies. Al-Mawardi was known for his works in islamic legal principles, in fact in 429 AH the caliph Al-Qadir summoned four jurist from each school of jurisprudence to write a legal epitome.(Sharif, 2002) Al-Mawardi was chosen to represent the school of šāfiʿī. Amongst the four jurist the Caliph favored Al-Mawardi and appointed chief imam. (Sharif, 2002) Along with the school of jurisprudence a common factor amongst most of the authors was their interest or relation in Islamic law. 
 
 TODO: DMGize, mark citations
 
@@ -103,7 +97,7 @@ Ibn 'Abd al-Salam was born in Damascus in year 577AH(Salahi) much after Abu al-L
 
 TODO: DMGize, mark citations
 
-Jalal al-Din al-Suyuti was born in Cario, Eygpt in the year 849AH (al-Suyuti, 2007) making his work the most recent amongst the cluster. Like most authors in the cluster he was a islamic jurist from the school of šāfiʿī. He was acknowledged as one of the more recent authority of the šāfiʿī school whose degree of ijthad was accepted by most(Meri,2005). Jalal al-Din al-Suyuti lacked a particular interest in islamic law and was not known to be a head advisor for any Islamic governments like both Ibn 'Abd al-Salam and Al-Mawardi. Although his father being a judge of a islamic state may have influenced any emphasis on law(islamic) within his writings and thus placing him within this cluster.(al-suyuti,2007) Unlike the other authors, al-Suyuti also studied the ḥanafī school of jurisprudence and was tutored by a Sufi, though his work drew primarily from šāfiʿī school of thought. Al-Suyuti's interest in the ḥanafī jurisprudence may account for the inclusion of Abu al-Layth Al Samarqandi in our cluster. 
+Jalal al-Din al-Suyuti was born in Cario, Eygpt in the year 849AH (al-Suyuti, 2007) making his work the most recent amongst the cluster. Like most authors in the cluster he was a islamic jurist from the school of šāfiʿī. He was acknowledged as one of the more recent authority of the šāfiʿī school whose degree of ijthad was accepted by most(Meri,2005). Jalal al-Din al-Suyuti lacked a particular interest in islamic law and was not known to be a head advisor for any Islamic governments like both Ibn 'Abd al-Salam and Al-Mawardi. Although his father being a judge of a islamic state may have influenced any emphasis on law(islamic) within his writings and thus placing him within this cluster.(al-suyuti,2007) Unlike the other authors, al-Suyuti also studied the *ḥanafī* school of jurisprudence and was tutored by a Sufi, though his work drew primarily from šāfiʿī school of thought. Al-Suyuti's interest in the *ḥanafī* jurisprudence may account for the inclusion of Abu al-Layth Al Samarqandi in our cluster. 
 
 TODO: DMGize, mark citations
 
@@ -124,32 +118,32 @@ library(knitr)
 opts_chunk$set(tidy.opts = list(width.cutoff=60, indent=2), tidy=TRUE)
 ```
 
-# I Script [`01_retrieval/download.r`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/01_retrieval/download.r)
+## I Script [`01_retrieval/download.r`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/01_retrieval/download.r)
 
 ```{r, code=readLines('../01_retrieval/download.r'), eval=FALSE}
 ```
 
-# II Script [`01_retrieval/extract.r`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/01_retrieval/extract.r)
+## II Script [`01_retrieval/extract.r`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/01_retrieval/extract.r)
 
 ```{r, code=readLines('../01_retrieval/extract.r'), eval=FALSE}
 ```
 
-# III Script [`01_retrieval/process.rb`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/01_retrieval/process.rb)
+## III Script [`01_retrieval/process.rb`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/01_retrieval/process.rb)
 
 ```{ruby, code=readLines('../01_retrieval/process.rb'), eval=FALSE}
 ```
 
-# IV Script [`01_retrieval/convert.rb`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/01_retrieval/convert.rb)
+## IV Script [`01_retrieval/convert.rb`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/01_retrieval/convert.rb)
 
 ```{ruby, code=readLines('../01_retrieval/convert.rb'), eval=FALSE}
 ```
 
-# V Script [`02_analysis/wordcount_by_author.rb`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/02_analysis/wordcount_by_author.rb)
+## V Script [`02_analysis/wordcount_by_author.rb`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/02_analysis/wordcount_by_author.rb)
 
 ```{ruby, code=readLines('../02_analysis/wordcount_by_author.rb'), eval=FALSE}
 ```
 
-# VI Query [`02_analysis/wordcount_whole_corpus.sql`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/02_analysis/wordcount_whole_corpus.sql)
+## VI Query [`02_analysis/wordcount_whole_corpus.sql`](https://github.com/Islamicate-DH/hw/tree/master/tafaseer_group/02_analysis/wordcount_whole_corpus.sql)
 
 ```{sql, code=readLines('../02_analysis/wordcount_whole_corpus.sql'), eval=FALSE}
 ```
@@ -162,10 +156,6 @@ TODO: Keep moving them into Biblatex file, keep referencing properly in the text
 Bastian M., Heymann S., Jacomy M. (2009). Gephi: an open source software for exploring and manipulating networks. International AAAI Conference on Weblogs and Social Media
 
 Delfina Serrano Ruano, “al-Qurṭubī”, in: Encyclopaedia of the Qurʾān, General Editor: Jane Dammen McAuliffe, Georgetown University, Washington DC. Retrieved From http://www.brillonline.com
-
-Fleisch, H., “al-Fīrūzābādī”, in: Encyclopaedia of Islam, Second Edition, Edited by: P. Bearman, Th. Bianquis, C.E. Bosworth, E. van Donzel, W.P. Heinrichs. Retrieved From http://www.brillonline.com
-
-Glazer, Sidney and Homerin, Th. Emil, “Abū Ḥayyān al-Gharnāṭī”, in: Encyclopaedia of Islam, THREE, Edited by: Kate Fleet, Gudrun Krämer, Denis Matringe, John Nawas, Everett Rowson. Retrieved from http://www.brillonline.com
 
 Jackson, Sherman A(1996). Islamic law and the state: the constitutional jurisprudence of Shihāb al-Dīn al-Qarāfī. Leiden: E.J. Brill, 1996.
 
