On a suspicion that this might be Thom's preferred style...

--- a/tafaseer_group/03_results/Paper.Rmd
+++ b/tafaseer_group/03_results/Paper.Rmd
@@ -16,6 +16,8 @@ latex_engine: xelatex
 urlcolor: blue
 bibliography: Paper.bib
 csl: aethiopistische-forschungen.csl
+header-includes:
+  - \setlength\parindent{24pt}\setlength{\parskip}{0.0pt plus 1.0pt}
 ---
 
 # 1 Introduction
